# FROST_Android_app

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cz/but/frost/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: main.c  native-lib.c
app/src/main/java/cz/but/frost/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cz/but/frost/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
